# dbt-column-lineage

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
demo/: build_demo_manifest.py
demo/dbt_project/: dbt_project.yml
docs/: ui-guide.md
frontend/: .env.development  .env.production  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: global.css  layout.tsx  page.tsx
frontend/src/app/cl/: page.tsx
frontend/src/app/cte/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/molecules/: CteNode.tsx  DashboardNode.tsx  DashboardNodeFrame.tsx  EditableTableNode.tsx  EventNode.tsx  EventNodeColumns.tsx  EventNodeFrame.tsx  EventNodeHandle.tsx  Node.tsx  NoteNode.tsx  TableNode.tsx  TableNodeColumnHandle.tsx  TableNodeFrame.tsx  TableNodeHandle.tsx  TableNodeMoreColumns.tsx  TableNodeTerminalMarker.tsx
frontend/src/components/organisms/: CanvasActions.tsx  EditToolbar.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/pages/: Cl.tsx  Cte.tsx
frontend/src/components/ui/: DashboardContentSelect.tsx  SchemaSourceColumnSelect.tsx  SearchDialog.tsx  Select.tsx  ToggleButtons.tsx  Tooltip.tsx
frontend/src/hooks/: useEventNodeOperations.ts  useGetWindowSize.ts
frontend/src/lib/: design.ts  utils.ts
frontend/src/store/: zustand.ts
src/: app.py  constants.py  lineage.py  looker.py  utils.py
src/dbt_column_lineage/: __init__.py  constants.py  frontend_out  lineage.py  looker.py  main.py  utils.py
test/unit/: conftest.py  test_dbt_docs_url.py  test_helpers.py  test_phantom_cte.py  test_sqlglot_unpivot_regression.py  test_table_lineage.py
tools/: looker_analyzer.py
