[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt_column_lineage"
dynamic = ["version"]
description = "A tool for dbt column lineage"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "sqlglot==24.1.0",
    "fastapi==0.112.1",
    "uvicorn==0.30.6",
    "requests==2.31.0",
    "pytz==2024.1",
    "looker-sdk==24.4.0",
    "python-liquid==1.12.1",
    "itsdangerous==2.2.0",
    "typer==0.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[project.scripts]
dbt-column-lineage = "dbt_column_lineage.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dbt_column_lineage*"]

[tool.setuptools.package-data]
"dbt_column_lineage" = ["frontend_out/**/*"]

[tool.setuptools_scm]
write_to = "src/dbt_column_lineage/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"
