[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt_column_lineage"
dynamic = ["version"]
description = "Visualize column-level lineage of dbt models in the browser, parsed from manifest.json/catalog.json with sqlglot"
authors = [{name = "Tomoki Takahashi", email = "takahashi_tomoki@oisixradaichi.co.jp"}]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["dbt", "lineage", "column-lineage", "sqlglot", "data-lineage", "snowflake"]
dependencies = [
    "sqlglot>=30,<31",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "requests>=2.31",
    "pytz>=2024.1",
    "itsdangerous>=2.1",
    "typer>=0.12",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# looker-sdk is only needed to run tools/looker_analyzer.py (offline analysis);
# the published runtime reads target/looker_analysis.json and never calls the SDK.
looker = ["looker-sdk>=24.0"]
dev = [
    "pytest",
    "black",
    "isort",
]

[project.scripts]
dbt-column-lineage = "dbt_column_lineage.main:main"

[project.urls]
Homepage = "https://github.com/tomoki-takahashi-oisix/dbt-column-lineage"
Repository = "https://github.com/tomoki-takahashi-oisix/dbt-column-lineage"
Issues = "https://github.com/tomoki-takahashi-oisix/dbt-column-lineage/issues"
Changelog = "https://github.com/tomoki-takahashi-oisix/dbt-column-lineage/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dbt_column_lineage*"]

[tool.setuptools.package-data]
"dbt_column_lineage" = ["frontend_out/**/*"]

[tool.setuptools_scm]
write_to = "src/dbt_column_lineage/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = ["test/unit"]
